--- a/index.html
+++ b/index.html
@@ -24,11 +24,31 @@
       <p>We start eaach process by understanding your business goals, the user's needs and the product requirements.</p>
       <p>Then we help translate them into effective and elegant solutions.</p>
     </div>
-    <div class="services"></div>
-    <h2>SERVICES</h2>
-    <p>Before we sign a contract or write a single line of code our team will spend the necessary time needed to understand your product vision.</p>
-    <p>The outcome of this scoping session is proposal of high level statement of work.</p>
-    <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+    <div class="services">
+      <h2>SERVICES</h2>
+      <p>Before we sign a contract or write a single line of code our team will spend the necessary time needed to understand your product vision.</p>
+      <p>The outcome of this scoping session is proposal of high level statement of work.</p>
+      <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+    </div>
+    <div class="what_we_do">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="design">
+            <h3>DESIGN</h3>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="development">
+            <h3>DEVELOPMENT</h3>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="product_management">
+            <h3>PRODUCT MANAGEMENT</h3>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
