--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
     </div>
     <div class="what_we_do">
+      <h2>WHAT WE DO</h2>
       <div class="row">
         <div class="col-md-4">
           <div class="design">
@@ -48,6 +49,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="portfolio">
+      <h2>PORTFOLIO</h2>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
