add contact_us section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
     <div class="portfolio">
       <h2>PORTFOLIO</h2>
     </div>
+    <div class="contact_us">
+      <h2>CONTACT US</h2>
+      <form action="">
+        <!-- <div class="row">
+          <div class="col-md-6">
+            <input type="text" name="name" id="name" placeholder="Name...">
+          </div>
+          <div class="col-md-6">
+            <input type="email" name="email" id="email" placeholder="Email...">
+          </div>
+        </div>
+        <div>
+          <input type="text" name="message" id="message" placeholder="Your message here...">
+        </div> -->
+        <div>
+          <input type="text" name="name" id="name" placeholder="Name...">
+          <input type="email" name="email" id="email" placeholder="Email...">
+        </div>
+        <div>
+          <input type="text" name="message" id="message" placeholder="Your message here...">
+        </div>
+      </form>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
