add alert to submit button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-  <!-- <div class="container"> -->
+  
     <div class="header">
       <img src="IP3/assets/logo/logo.png" alt="Delani studio logo">
       <h1 id="welcome">WELCOME</h1>
@@ -39,7 +39,7 @@
     <div class="what_we_do">
       <h2>WHAT WE DO</h2>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-8">
           <div class="design">
             <img class="w_image" src="IP3/assets/services_icons/design_icon.png" alt="design" id="d_showing">
             <p>DESIGN</p>
@@ -47,7 +47,7 @@
             <p class="d_hidden">Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-8">
           <div class="development">
             <img class="w_image" src="IP3/assets/services_icons/dev_icon.png" alt="development icon" id="dev_showing">
             <p>DEVELOPMENT</p>
@@ -55,7 +55,7 @@
             <p class="dev_hidden">They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-8">
           <div class="product_management">
             <img class="w_image" src="IP3/assets/services_icons/product_icon.png" alt="product management" id="product_showing">
             <p>PRODUCT MANAGEMENT</p>
@@ -71,37 +71,67 @@
         <figure class="image1">
           <img src="IP3/assets/portfolio/work4.jpg" alt="first project">
           <figcaption class="project1">
-            <p>project 1</p>
+            <p>PROJECT 1</p>
           </figcaption>
         </figure>
+        <figure class="image2">
           <img src="IP3/assets/portfolio/work3.jpg" alt="second project">
+          <figcaption class="project2">
+            <p>PROJECT 2</p>
+          </figcaption>
+        </figure>
+        <figure class="image3">
           <img src="IP3/assets/portfolio/work2.jpg" alt="third project">
+          <figcaption class="project3">
+            <p>PROJECT 3</p>
+          </figcaption>
+        </figure>
+        <figure class="image4">
           <img src="IP3/assets/portfolio/work1.jpg" alt="fourth project">
+          <figcaption class="project4">
+            <p>PROJECT 4</p>
+          </figcaption>
+        </figure>
+        <figure class="image5">
           <img src="IP3/assets/portfolio/work5.jpg" alt="fifth project">
+          <figcaption class="project5">
+            <p>PROJECT 5</p>
+          </figcaption>
+        </figure>
+        <figure class="image6">
           <img src="IP3/assets/portfolio/work6.jpg" alt="sixth project">
+          <figcaption class="project6">
+            <p>PROJECT 6</p>
+          </figcaption>
+        </figure>
+        <figure class="image7">
           <img src="IP3/assets/portfolio/work7.jpg" alt="seventh project">
+          <figcaption class="project7">
+            <p>PROJECT 7</p>
+          </figcaption>
+        </figure>
+        <figure class="image8">
           <img src="IP3/assets/portfolio/work8.jpg" alt="eighth project">
+          <figcaption class="project8">
+            <p>PROJECT 8</p>
+          </figcaption>
+        </figure>
     </div>
     <div class="contact_us">
       <h2>CONTACT US</h2>
-      <form action="" method="post" id="myForm" >
-        <!-- <div class="row">
-          <div class="col-md-6">
-            <input type="text" name="name" id="name" placeholder="Name...">
-          </div>
-          <div class="col-md-6">
-            <input type="email" name="email" id="email" placeholder="Email...">
-          </div>
-        </div>
+      
+        <form action="https://gmail.us5.list-manage.com/subscribe/post" method="POST">
+          <input type="hidden" name="u" value="e26edbd533f18b268b01038c5">
+          <input type="hidden" name="id" value="0b517c12ea">
+        
+        <label for="name"></label>
+        <input type="text" name="name" tabindex="-1" value="" placeholder="Name" id="name" class="transparent-input">
+        <label for="email"></label>
+        <input type="email" name="email" tabindex="-1" value="" placeholder="Email" id="email" class="transparent-input">
+        <label for="comment"></label>
+        <textarea name="message" tabindex="-1" placeholder="Your message here..." id="message" rows="4" columns="50"></textarea>
         <div>
-          <input type="text" name="message" id="message" placeholder="Your message here...">
-        </div> -->
-        <div>
-          <input type="text" class="transparent-input" name="name" id="name" placeholder="Name...">
-          <input type="email" class="transparent-input" name="email" id="email" placeholder="Email...">
-        </div>
-        <div>
-          <textarea onClick="submitForm()" name="message" id="message" placeholder="Your message here..." rows="4" columns="50"></textarea>
+          <input type="submit" class="formEmailButton" name="submit" value="Submit" id="submit" onClick="submitForm()">
         </div>
       </form>
     </div>
@@ -119,7 +149,7 @@
     <div class="footer">
       <p>DELANI STUDIO<br>2019</p> 
     </div>
-  <!-- </div> -->
+  
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
 </body>
