add images to image folder

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
   
     <div class="header">
-      <img src="IP3/assets/logo/logo.png" alt="Delani studio logo">
+      <img src="images/logo.png" alt="Delani studio logo">
       <h1 id="welcome">WELCOME</h1>
       <h1>TO DELANI STUDIO</h1>
       <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-      <img src="IP3/assets/mouse_click.png" alt="mouse icon" id="mouse">
+      <img src="images/mouse_click.png" alt="mouse icon" id="mouse">
     </div>
     <div class="about_us">
       <h2>ABOUT US</h2>
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="col-md-4 col-sm-8">
           <div class="design">
-            <img class="w_image" src="IP3/assets/services_icons/design_icon.png" alt="design" id="d_showing">
+            <img class="w_image" src="images/design_icon.png" alt="design" id="d_showing">
             <p>DESIGN</p>
             <p class="d_hidden">Our design practice offers a whole range of services including brand strategy, interaction and visual design and user experience testing.</p>
             <p class="d_hidden">Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
@@ -49,7 +49,7 @@
         </div>
         <div class="col-md-4 col-sm-8">
           <div class="development">
-            <img class="w_image" src="IP3/assets/services_icons/dev_icon.png" alt="development icon" id="dev_showing">
+            <img class="w_image" src="images/dev_icon.png" alt="development icon" id="dev_showing">
             <p>DEVELOPMENT</p>
             <p class="dev_hidden">All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
             <p class="dev_hidden">They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
@@ -57,7 +57,7 @@
         </div>
         <div class="col-md-4 col-sm-8">
           <div class="product_management">
-            <img class="w_image" src="IP3/assets/services_icons/product_icon.png" alt="product management" id="product_showing">
+            <img class="w_image" src="images/product_icon.png" alt="product management" id="product_showing">
             <p>PRODUCT MANAGEMENT</p>
             <p class="product_hidden">Planning and development is interactive. Because we are constantly coding and testing, the products we build are always ready to go live.</p>
             <p class="product_hidden">This interactive process allows for changes as business requirements evolve.</p>
@@ -69,49 +69,49 @@
       <h2>PORTFOLIO</h2>
       <div class="p_images">
         <figure class="image1">
-          <img src="IP3/assets/portfolio/work4.jpg" alt="first project">
+          <img src="images/work4.jpg" alt="first project">
           <figcaption class="project1">
             <p>PROJECT 1</p>
           </figcaption>
         </figure>
         <figure class="image2">
-          <img src="IP3/assets/portfolio/work3.jpg" alt="second project">
+          <img src="images/work3.jpg" alt="second project">
           <figcaption class="project2">
             <p>PROJECT 2</p>
           </figcaption>
         </figure>
         <figure class="image3">
-          <img src="IP3/assets/portfolio/work2.jpg" alt="third project">
+          <img src="images/work2.jpg" alt="third project">
           <figcaption class="project3">
             <p>PROJECT 3</p>
           </figcaption>
         </figure>
         <figure class="image4">
-          <img src="IP3/assets/portfolio/work1.jpg" alt="fourth project">
+          <img src="images/work1.jpg" alt="fourth project">
           <figcaption class="project4">
             <p>PROJECT 4</p>
           </figcaption>
         </figure>
         <figure class="image5">
-          <img src="IP3/assets/portfolio/work5.jpg" alt="fifth project">
+          <img src="images/work5.jpg" alt="fifth project">
           <figcaption class="project5">
             <p>PROJECT 5</p>
           </figcaption>
         </figure>
         <figure class="image6">
-          <img src="IP3/assets/portfolio/work6.jpg" alt="sixth project">
+          <img src="images/work6.jpg" alt="sixth project">
           <figcaption class="project6">
             <p>PROJECT 6</p>
           </figcaption>
         </figure>
         <figure class="image7">
-          <img src="IP3/assets/portfolio/work7.jpg" alt="seventh project">
+          <img src="images/work7.jpg" alt="seventh project">
           <figcaption class="project7">
             <p>PROJECT 7</p>
           </figcaption>
         </figure>
         <figure class="image8">
-          <img src="IP3/assets/portfolio/work8.jpg" alt="eighth project">
+          <img src="images/work8.jpg" alt="eighth project">
           <figcaption class="project8">
             <p>PROJECT 8</p>
           </figcaption>
@@ -136,15 +136,15 @@
       </form>
     </div>
     <div class="social_media_icons">
-      <img src="IP3/assets/social_icons/twitter.png" alt="twitter icon">
-      <img src="IP3/assets/social_icons/dribble.png" alt="dribble icon">
-      <img src="IP3/assets/social_icons/facebook.png" alt="facebook icon">
-      <img src="IP3/assets/social_icons/g_plus.png" alt="google plus icon">
-      <img src="IP3/assets/social_icons/skype.png" alt="skype icon">
-      <img src="IP3/assets/social_icons/stumble_upon.png" alt="stumble upon icon">
-      <img src="IP3/assets/social_icons/behance.png" alt="behance icon">
-      <img src="IP3/assets/social_icons/pinterest.png" alt="pinterest icon">
-      <img src="IP3/assets/social_icons/flickr.png" alt="flickr icon">
+      <img src="images/twitter.png" alt="twitter icon">
+      <img src="images/dribble.png" alt="dribble icon">
+      <img src="images/facebook.png" alt="facebook icon">
+      <img src="images/g_plus.png" alt="google plus icon">
+      <img src="images/skype.png" alt="skype icon">
+      <img src="images/stumble_upon.png" alt="stumble upon icon">
+      <img src="images/behance.png" alt="behance icon">
+      <img src="images/pinterest.png" alt="pinterest icon">
+      <img src="images/flickr.png" alt="flickr icon">
     </div>
     <div class="footer">
       <p>DELANI STUDIO<br>2019</p> 
